# GameDev

./: CMakeLists.txt  README.md  gitignore.txt
lib_maths/: maths.h
lib_tile_level_loader/: levelSystem.cpp  levelSystem.h
pacman/: entity.cpp  entity.h  game.h  ghost.cpp  ghost.h  main.cpp  pacman.cpp  pacman.h  player.cpp  player.h  scene.h  system_renderer.cpp  system_renderer.h
practical_1/: main.cpp
res/levels/: pacman_maze.txt
space_invaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
tile_engine/: entity.cpp  entity.h  game.h  main.cpp  player.cpp  player.h
